[tool.poetry]
name = "repl-nix-luna-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_luna_1"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.82"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
